Adding more UI elements

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>3D pixel picrew</title>
   </head>
   <body>
+    <main id="main">
+      <div id="three"></div>
+      <div id="menu" class="menu">
+        <div id="tabs">
+        </div>
+        <div id="grid"></div>
+      </div>
+    </main>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
