Adding the beginnings of image export functionality

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
         <div id="tabs">
         </div>
         <div id="grid"></div>
-      </div>
+      </div>      
     </main>
+    <div id="tempButton">Temp Button</div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
