Added rotation to main functionality

--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   </head>
   <body>
     <main id="main">
-      <div id="three"></div>
+      <div id="three" style="position: relative;">
+        <div id="leftButton" class="unselectable directionalButton" style="left:10%">Left</div>
+        <div id="rightButton" class="unselectable directionalButton" style="right:10%">Right</div>
+      </div>
       <div id="menu" class="menu">
         <div id="tabs">
         </div>
         <div id="grid"></div>
       </div>      
     </main>
-    <div id="tempButton">Temp Button</div>
+    <div id="tempButton">Temp button</div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
