--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   <body>
     <main id="main">
       <div id="three" style="position: relative;">
-        <div id="leftButton" class="unselectable directionalButton" style="left:10%">Left</div>
-        <div id="rightButton" class="unselectable directionalButton" style="right:10%">Right</div>
+          <div id="leftButton" class="unselectable directionalButton" style="left: 10%">Rotate<br/>left</div>
+          <div id="animationTitle" class="unselectable directionalButton" style="left: 33.33%; width: 33.33%; bottom: 12%; cursor: default;">Animation:</div>
+          <div>
+            <select name="animationChooser" id="animationChooser" class="unselectable directionalButton" style="left: 33.33%; width: 33.33%; bottom: 6%;" id="animationChooser">
+              <option value="eg1">Example 1</option>
+              <option value="eg2">Example 2</option>
+              <option value="eg3">Example 3</option>
+              <option value="eg4">Example 4</option>
+            </select>
+          </div>
+          <div id="rightButton" class="unselectable directionalButton" style="right:10%">Rotate<br/>right</div>
       </div>
       <div id="menu" class="menu">
         <div id="tabs">
