Added colour options

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div id="tabs">
         </div>
         <div id="grid"></div>
+        <input type="color" id="color-picker" class="unselectable">
       </div>      
     </main>
     <div id="tempButton">Temp button</div>
