--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="https://owlks4.github.io/3d-pixel-picrew/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D pixel picrew</title>
-    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-DGcsswTY.js"></script>
-    <link rel="modulepreload" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/gif-worker.js">
+    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-BVndPUAE.js"></script>
+    <link rel="modulepreload" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/gif.worker.js">
     <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app-DeLMojjT.css">
   </head>
   <body>
