--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div id="three" style="position: relative;">          
           <div id="render-button-container" class="unselectable directionalButton">
             <button id="render-button" type="button">
-              Render
+              Render all
             </button>
             @ <input type="number" id="fps-input" min="1" max="60" step="1" value="12"> fps
           </div>
@@ -29,6 +29,6 @@
         <input type="color" id="color-picker" class="unselectable">
       </div>      
     </main>
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
