--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>3D pixel picrew</title>
   </head>
   <body>
+    <h1>owlks4's pixel art character creator</h1>
     <main id="main">
       <div id="three" style="position: relative;">          
           <div id="render-button-container" class="unselectable directionalButton">
