--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="https://owlks4.github.io/3d-pixel-picrew/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D pixel picrew</title>
-    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-CRoBfq6O.js"></script>
-    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app-DeLMojjT.css">
+    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-CmhAo6GO.js"></script>
+    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app-Bl8qxdnP.css">
   </head>
   <body>
+    <h1>owlks4's pixel art character creator</h1>
     <main id="main">
       <div id="three" style="position: relative;">          
           <div id="render-button-container" class="unselectable directionalButton">
