--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
           <button type="button" id="rightButton" class="unselectable directionalButton" style="right:15%">Rotate<br/>right</button>
       </div>
       <div id="menu" class="menu">
-        <div id="tabs">
-        </div>
+        <h1 id="slot-type-header" style="width:100%;text-align:center;margin-top:0.5em;">Head</h1>
         <div id="grid"></div>
         <input type="color" id="color-picker" class="unselectable">
-      </div>      
+      </div>
+      <div id="tabs">
+      </div> 
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
