--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
           <button type="button" id="rightButton" class="unselectable directionalButton" style="right:15%">Rotate<br/>right</button>
       </div>
       <div id="menu" class="menu">
-        <h1 id="slot-type-header" style="width:100%;text-align:center;margin-top:0.5em;">Head</h1>
+        <div style="width:100%;text-align:center;margin-top:0.5em;">
+          <h1 id="slot-type-header" style="margin-top:0.5em">Head</h1>
+          <select id="slot-type-header-mobile"></select>
+        </div>        
         <div id="grid"></div>
         <input type="color" id="color-picker" class="unselectable">
       </div>
