Adopt mobile dropdown as replacement for PC tabs

--- a/index.html
+++ b/index.html
@@ -25,14 +25,11 @@
       </div>
       <div id="menu" class="menu">
         <div style="width:100%;text-align:center;margin-top:0.5em;">
-          <h1 id="slot-type-header" style="margin-top:0.5em">Head</h1>
-          <select id="slot-type-header-mobile"></select>
+          <select id="slot-type-header"></select>
         </div>        
         <div id="grid"></div>
         <input type="color" id="color-picker" class="unselectable">
       </div>
-      <div id="tabs">
-      </div> 
     </main>
     <script type="module" src="/src/main.js"></script>
   </body>
