--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="https://owlks4.github.io/3d-pixel-picrew/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D pixel picrew</title>
-    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-BmkOlcfQ.js"></script>
-    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app-Bl8qxdnP.css">
+    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-DUTOWPtY.js"></script>
+    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app--FYzuHGh.css">
   </head>
   <body>
     <h1>owlks4's pixel art character creator</h1>
@@ -26,11 +26,12 @@
           <button type="button" id="rightButton" class="unselectable directionalButton" style="right:15%">Rotate<br/>right</button>
       </div>
       <div id="menu" class="menu">
-        <div id="tabs">
-        </div>
+        <div style="width:100%;text-align:center;margin-top:0.5em;">
+          <select id="slot-type-header"></select>
+        </div>        
         <div id="grid"></div>
         <input type="color" id="color-picker" class="unselectable">
-      </div>      
+      </div>
     </main>
   </body>
 </html>
