More UI changes

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>3D pixel picrew</title>
   </head>
   <body>
-    <h1>owlks4's pixel art character creator</h1>
+    <header>
+      <h1 id="title">owlks4's pixel art character creator</h1>
+    </header>
     <main id="main">
-      <div id="three" style="position: relative;">          
+      <div id="three">          
           <div id="render-button-container" class="unselectable directionalButton">
             <button id="render-button" type="button">
               Render all
