--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="https://owlks4.github.io/3d-pixel-picrew/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3D pixel picrew</title>
-    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-DUTOWPtY.js"></script>
-    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app--FYzuHGh.css">
+    <script type="module" crossorigin src="https://owlks4.github.io/3d-pixel-picrew/assets/js/app-VzeApQDW.js"></script>
+    <link rel="stylesheet" crossorigin href="https://owlks4.github.io/3d-pixel-picrew/assets/app-CrXdI2zH.css">
   </head>
   <body>
-    <h1>owlks4's pixel art character creator</h1>
+    <header>
+      <h1 id="title">owlks4's pixel art character creator</h1>
+    </header>
     <main id="main">
-      <div id="three" style="position: relative;">          
+      <div id="three">          
           <div id="render-button-container" class="unselectable directionalButton">
             <button id="render-button" type="button">
               Render all
